# reddit

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  FAQ.md  README.md  conftest.py  docker-compose.yml  entrypoint.sh  env-template  manage.py  pyproject.toml  pytest.ini  roadmap.md
.github/: CODEOWNERS
.github/workflows/: ai.yml  code-review.yml  pep.yml  run_tests.yml
api/: serializers.py  urls.py  views.py
articles/: urls.py  views.py
articles/tests/: conftest.py  test_base_page.py  test_base_page2.py  test_privacy_police.py  test_privacy_policy.py
core/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_tag_created_at.py  0003_image_rename_type_postvote_choice_post_down_votes_and_more.py  0004_alter_post_parent.py  0005_remove_postvote_post_postvote_post.py  0006_alter_postvote_unique_together.py  0007_alter_image_options_remove_post_image_image_order_and_more.py  0008_alter_image_order.py  0009_alter_community_options.py  0010_communitymember.py  0011_community_members_alter_communitymember_community_and_more.py  0012_rename_user_community_author_rename_user_post_author.py  0012_savedpost.py  0013_alter_savedpost_user.py  0014_merge_20240608_1617.py  0015_post_view_count.py  0016_post_display_counter.py  0017_remove_post_view_count.py  0018_alter_post_author.py  0018_alter_post_parent.py  0019_alter_community_managers_alter_post_managers.py  0019_merge_0018_alter_post_author_0018_alter_post_parent.py  0020_community_slug.py  0020_merge_20240621_1638.py  0021_alter_community_author.py  0022_auto_20240624_2118.py  0022_postreport.py  0023_alter_post_managers.py  0023_community_is_18_plus_community_privacy.py  0023_postreport_updated_at.py  0024_alter_community_privacy.py  0024_postreport_report_person_and_more.py  0025_alter_community_privacy.py  0025_postreport_verified.py  0026_adminaction.py  0026_alter_post_managers.py  0027_merge_0022_auto_20240624_2118_0026_adminaction.py  0027_post_gold_postaward.py  0027_postaward.py  0028_alter_adminaction_comment_and_more.py  (+14 more)
core/templatetags/: is_saved.py  is_saved_by.py
core/tests/: test_adding_post.py  test_api.py  test_awards.py  test_commands.py  test_contactform.py  test_forms.py  test_models.py  test_utils.py  test_views.py
reddit/: asgi.py  settings.py  test_empty.py  urls.py  wsgi.py
reddit/tests/: test_empty.py
static/css/: style.css
static/js/: main.js
templates/: 403.html  base.html  post-add.html  post-detail.html  post-list.html  post.html  privacy-policy.html
users/: admin.py  api_urls.py  api_views.py  apps.py  choices.py  forms.py  helpers.py  models.py  serializers.py  signals.py  tokens.py  urls.py  views.py
users/middleware/: update_last_activity.py
users/migrations/: 0001_initial.py  0002_user_last_activity.py  0003_alter_user_last_activity.py  0004_alter_user_last_activity.py  0005_alter_user_last_activity.py  0005_user_username.py  0006_user_nickname.py  0006_user_username_make_unique.py  0007_alter_user_username.py  0007_user_populate_nickname.py  0008_alter_user_nickname.py  0008_alter_user_nickname_squashed_0011_remove_user_nickname.py  0008_merge_20240614_1111.py  0008_profile_usersettings_alter_user_nickname_and_more.py  0009_profile_usersettings_user_gender_user_profile_and_more.py  0009_user_avatar.py  0009_user_create_post.py  0010_alter_user_avatar.py  0010_profile_sociallink_usersettings.py  0010_remove_sociallink_user_profile_sociallink_profile_and_more.py  0010_user_warnings.py  0011_add_empty_user_profiles_and_settings.py  0011_alter_user_avatar.py  (+31 more)
utils/: create_test_avatar.py
(+48 files in other folders)
