[tool.poetry]
name = "reddit"
version = "0.1.0"
description = ""
authors = ["pymasters.pl"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["tests/", "scripts/"]
line-length = 120

indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
