[tool.poetry]
name = "reddit"
version = "0.1.0"
description = ""
authors = ["pymasters.pl"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["scripts/", "manage.py", "asgi.py", "wsgi.py", "migrations/"]
line-length = 120

indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D104", "D100", "D103", "D211", "D213", "D101"]

[tool.ruff.format]
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]